# Shuttle-Detector

./: .gitignore  CONTEXT.md  PLAN.md  PRD.md  pyproject.toml
src/: main.py
src/detector/: camera.py  classifier.py  detector.py  onnx_shuttle.py  pipeline.py  shuttle_detector.py
src/sound/: player.py
src/web/: server.py
src/web/static/: index.html
