[project]
name = "shuttle-detector"
version = "0.1.0"
description = "Badminton shuttle landing detector with web dashboard"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "opencv-python-headless>=4.9.0",
    "numpy>=1.24.0,<2",  # tflite-runtime & onnxruntime not yet compatible with numpy 2
    "python-multipart>=0.0.9",
    "tflite-runtime>=2.14.0; sys_platform == 'linux'",
]

[tool.uv]
python-system-site-packages = true  # needed for system-wide apt-installed picamera2

[tool.hatch.build.targets.wheel]
packages = ["src/"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
